# pywebpack

./: .editorconfig  .git-blame-ignore-revs  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py  setup.py.bak
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  usage.rst
pywebpack/: __init__.py  bundle.py  errors.py  helpers.py  manifests.py  project.py  storage.py  version.py
tests/: conftest.py  test_manifest.py  test_pywebpack.py  test_storage.py
tests/manifests/: bundletracker-invalid.json  bundletracker.json  manifest.json  yam-invalid.json  yam.json
tests/projects/: just-a-file.js
tests/projects/broken/: package.json
tests/projects/buildtpl/: package.json
tests/projects/bundle/: index.js
tests/projects/bundle2/: main.js
tests/projects/simple/: webpack.config.js
